fea: adding left padding to prevent scrollbar from causing shifts

--- a/src/styles/tw.css
+++ b/src/styles/tw.css
@@ -30,6 +30,7 @@
 
 ::-webkit-scrollbar-thumb {
 	border: 0 solid #fff;
+	position: relative;
 	border-radius: 16px;
 	background-color: var(--primary);
 }
